# agisdk

./: .gitignore  API_DOCS.md  INSTALL.md  README.md  analyze_time2_results.py  browseruseeval.py  comparison_summary.py  eval_gocalendar_11_v2.py  eval_gomail_13_v2.py  evaluate_human.py  example.py  generate_summary.py  harness_example.py  interactive.py  my_evaluation.py  parallel_custom_agent_test.py  pseudocode.py  pyproject.toml  realeval.py  realeval_agents.py  requirements.txt  setup.py  starter.py  stats.py  trashharness.py  visualize_failures.py
.trash/: evaluate_human.py  interactive.py  operator_agent.py  pseudocode.py  realeval.py  realeval_agents.py
OLD PACKAGE/: .env.example  .gitignore  LICENSE  Makefile  README.md  pyproject.toml
OLD PACKAGE/browsergym/: pyproject.toml
OLD PACKAGE/browsergym/webclones/: README.md  pyproject.toml  requirements.txt
OLD PACKAGE/browsergym/webclones/src/browsergym/webclones/: __init__.py  base.py  evaluate.py
OLD PACKAGE/browsergym/webclones/tasks/: dashdish-10.json  dashdish-11.json  dashdish-3.json  dashdish-5.json  dashdish-9.json  fly-unified-1.json  fly-unified-14.json  fly-unified-4.json  fly-unified-5.json  fly-unified-7.json  gocalendar-1.json  gocalendar-10.json  gocalendar-3.json  gocalendar-5.json  gocalendar-6.json  gocalendar-7.json  gocalendar-8.json  gomail-2.json  gomail-5.json  gomail-8.json  networkin-2.json  networkin-3.json  networkin-4.json  networkin-5.json  networkin-6.json  networkin-7.json  networkin-8.json  networkin-9.json  omnizon-10.json  omnizon-2.json  omnizon-4.json  omnizon-5.json  omnizon-6.json  omnizon-7.json  omnizon-8.json  opendining-1.json  opendining-10.json  opendining-2.json  opendining-6.json  staynb-6.json  (+16 more)
OLD PACKAGE/demo_agent/: basic_agent.py  requirements.txt  run_demo.py
OLD PACKAGE/scripts/: custom_agent.py  interactive.py  operator_agent.py  realeval.py  realeval_agents.py
agisdk/: __init__.py  cdp_utils.py  custom_agent.py  eval.py  harness.py  playwright_utils.py  pw_example.py  results.py  results_utils.py  websocket_example.py
agisdk.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
agisdk/tasks/: dashdish-4.json  dashdish-6.json  fly-unified-10.json  fly-unified-11.json  fly-unified-12.json  fly-unified-13.json  fly-unified-14.json  fly-unified-2.json  fly-unified-3.json  fly-unified-6.json  fly-unified-8.json  fly-unified-9.json  gocalendar-2.json  gocalendar-9.json  gomail-3.json  gomail-4.json  gomail-5.json  gomail-6.json  gomail-7.json  gomail-8.json  networkin-1.json  omnizon-3.json  opendining-3.json  opendining-7.json  staynb-1.json  staynb-2.json  staynb-4.json  tasks_export.csv  topwork-1.json  udriver-10.json  udriver-3.json  udriver-4.json  udriver-5.json  zilloft-2.json  zilloft-4.json
docs/: Creation Task.md  SUBMISSION_GUIDE.md  TODO.md  Task.md
docs/final_state/: staynb.json  zilloft.json
example/: README.md  anthropic_cua.py  browser-use.py  custom.py  custom_agent.py  example.py  hackable.py  hackable_agent.py  human_run.py  human_run_local.py  leaderboard_example.py  nova.py  nova_benchmark.py  openAI_cua.py  openai-agent.py  run_dashdish_simple.py  starter.py  starter_agent.py
example/rl_training/agents/: agent_logger_class.py  (+1 more)
example/tasks/: networkin-23.json  test.json
src/: README.md
src/agisdk/: README.md  __init__.py  tasks.py
src/agisdk.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
(+706 files in other folders)
